fix: align Card focus, hover and selected states with the rest of new focused styles. (#766)

--- a/packages/forma-36-react-components/src/components/Card/Card.css
+++ b/packages/forma-36-react-components/src/components/Card/Card.css
@@ -12,9 +12,9 @@
   color: var(--color-text-dark);
   text-decoration: none;
   background: var(--color-white);
-  box-shadow: var(--box-shadow-default);
   transition: border-color var(--transition-duration-default)
-    var(--transition-easing-default);
+      var(--transition-easing-default),
+    box-shadow var(--transition-duration-short) var(--transition-easing-default);
 }
 
 .Card--padding-default {
@@ -32,11 +32,20 @@
 .Card--is-interactive:hover,
 .Card--is-interactive:focus {
   outline: none;
-  border-color: var(--color-blue-dark);
+  border-color: var(--color-primary);
   cursor: pointer;
 }
 
+.Card--is-interactive:focus {
+  box-shadow: var(--glow-primary);
+}
+
 .Card--is-selected {
-  box-shadow: 0px 0px 0px 3px inset var(--color-blue-dark),
-    var(--box-shadow-default);
+  background-color: var(--color-blue-lightest);
+  box-shadow: 0px 0px 0px 1px inset var(--color-blue-mid);
+  border-color: var(--color-blue-mid);
+}
+
+.Card--is-selected:focus {
+  box-shadow: var(--glow-primary), 0px 0px 0px 1px inset var(--color-blue-mid);
 }
